--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,11 +1,12 @@
-.link {
-  text-decoration:none;
-  outline: none;
-}
-
-.appWrapper {
+.pageLayout {
   margin-left: 10%;
   margin-right: 10%;
+  margin-bottom: 2rem;
+}
+
+.removeLinkStyle {
+  text-decoration :none;
+  outline: none;
 }
 
 .divider {
