feat: upgrade angular to v14, recreate yarn.lock | bh / sas | #1927

--- a/src/app/pages/utilities.page.scss
+++ b/src/app/pages/utilities.page.scss
@@ -1,4 +1,4 @@
-@import '~@porsche-design-system/utilities/scss';
+@import '@porsche-design-system/utilities/scss';
 
 .backgroundColorPds {
   background: $p-color-brand;
